# ieee-very-small

./: .gitignore  LICENSE  README.md  placas.txt
docs/: Makefile  (+1 more)
software/: CMakeLists.txt  CMakeLists.txt~  README  install_unball.sh  install_vision.sh  package.xml  run_strategy_and_robots.sh  run_strategy_and_simulator.sh  run_vision_and_GUI.sh  stop.sh
software/config/: vision.yaml
software/data/: calibration_matrix.txt  rectification_matrix.txt
software/include/unball/color_calibration/: color_calibration.hpp
software/include/unball/geometry/: point.hpp
software/include/unball/keyboard/: keyboard_input.hpp
software/include/unball/strategy/: action_controller.hpp  assistent_player.hpp  attractive_potential_field.hpp  ball.hpp  goalkeeper.hpp  goalkeeper_kicker.hpp  goals.hpp  idle_player.hpp  initial_goalkeeper.hpp  keyboard_input.hpp  kicker_player.hpp  no_play.hpp  null_potential_field.hpp  parallel_potential_field.hpp  penalty_kicker.hpp  perpendicular_potential_field.hpp  play.hpp  play1.hpp  play_controller.hpp  play_formation_1.hpp  play_formation_2.hpp  play_stop.hpp  player.hpp  potential_field.hpp  radial_potential_field.hpp  regular_player.hpp  repulsive_potential_field.hpp  robot.hpp  selective_potential_field.hpp  state_estimator.hpp  strategy.hpp  tactic.hpp  tangential_potential_field.hpp  trajectory_controller.hpp
software/include/unball/strategy/legacy/: action_controller.hpp  no_play.hpp  play.hpp  play_controller.hpp  play_formation_1.hpp  play_formation_2.hpp  play_stop.hpp
software/include/unball/utils/: math.hpp  test_angles.hpp  vector.hpp
software/include/unball/vision/: ball_filter.hpp  ball_identifier.hpp  ball_tracker.hpp  gui.hpp  homography.hpp  hsv_color_data.hpp  kalman_filter.hpp  measurement_conversion.hpp  preprocessor.hpp  robot_data.hpp  robot_filter.hpp  robot_identifier.hpp  robot_tracker.hpp  segmentation_algorithm.hpp  segmenter.hpp  tracked_field.hpp  tracked_object.hpp  tracked_robot.hpp  tracker.hpp  vision.hpp  vision_polygon.hpp
software/launch/: dummy_camera.launch  run_strategy.launch  run_vision.launch  show_camera.launch  simulator.launch  simulator.launch~  strategy.launch  unball.launch  unball_simulation.launch  unball_simulation.launch~
software/model/: ieee_very_small_field.world  unball_robot.urdf
software/msg/: KeyboardMessage.msg
software/nodes/: communication_node.py  fake_strategy_node.py
software/script/: start.sh  stop.sh
software/src/: CMakeLists.txt  package.xml
software/src/camera/: save_kinect_video.cpp  show_kinect_camera.cpp
software/src/dummy_camera/: dummy_camera.cpp  dummy_frame.cpp  show_dummy_camera.cpp
software/src/dummy_camera/test/: test_dummy_camera.cpp
software/src/geometry/: point.cpp
software/src/includes/: Point.cpp  Point.h  point.cpp  point.hpp
software/src/keyboard/: keyboard_node.cpp
software/src/launch/: test_vision.launch  unball.launch  unball_simulation.launch
software/src/msg/: StrategyMessage.msg  VisionMessage.msg
software/src/simulator/: ieee_very_small_field.world  simulation.cpp  simulation.hpp  simulation_plugin.cpp  simulator.launch  simulator_node.cpp  unball_robot.sdf  unball_robot.urdf
software/src/strategy/: action_controller.cpp  action_controller.hpp  ball.cpp  ball.hpp  play.cpp  play.hpp  play1.cpp  play1.hpp  play_controller.cpp  play_controller.hpp  play_formation_1.cpp  play_formation_1.hpp  play_formation_2.cpp  play_formation_2.hpp  play_stop.cpp  robot.cpp  robot.hpp  state_estimator.cpp  strategy.cpp  strategy.hpp  strategy_node.cpp
software/src/test/: hello_world.cpp
software/src/unball/: CMakeLists.txt
software/src/unball/camera/: save_kinect_video.cpp  show_camera.cpp  show_kinect_camera.cpp  take_kinect_photo.cpp
software/src/unball/color_calibration/: color_calibration.cpp  color_calibration_node.cpp
software/src/unball/communication/: communication_node.cpp
software/src/unball/config/: vision.yaml
software/src/unball/dummy_camera/: dummy_camera.cpp  dummy_frame.cpp
software/src/unball/include/unball/geometry/: point.hpp
software/src/unball/keyboard/: keyboard_input.cpp  keyboard_node.cpp
software/src/unball/launch/: dummy_camera.launch  test_vision.launch  unball_simulation.launch
software/src/unball/measurement_system/: measurement_system_node.cpp  teste  teste.cpp
software/src/unball/model/: ieee_very_small_field.world
software/src/unball/simulator/: simulator_node.cpp
software/src/unball/strategy/: action_controller.cpp  assistent_player.cpp  attractive_potential_field.cpp  goalkeeper.cpp  goalkeeper_kicker.cpp  goals.cpp  idle_player.cpp  initial_goalkeeper.cpp  keyboard_input.cpp  kicker_player.cpp  no_play.cpp  null_potential_field.cpp  parallel_potential_field.cpp  penalty_kicker.cpp  perpendicular_potential_field.cpp  play.cpp  play1.cpp  play_controller.cpp  play_formation_1.cpp  play_formation_2.cpp  play_stop.cpp  player.cpp  radial_potential_field.cpp  regular_player.cpp  repulsive_potential_field.cpp  robot.cpp  selective_potential_field.cpp  state_estimator.cpp  strategy.cpp  strategy_node.cpp  tactic.cpp  tangential_potential_field.cpp  trajectory_controller.cpp
software/src/unball/strategy/legacy/: action_controller.cpp  no_play.cpp  play.cpp  play_controller.cpp  play_formation_1.cpp  play_formation_2.cpp  play_stop.cpp
software/src/unball/test/geometry/: test_point.cpp
software/src/unball/utils/: math.cpp  point.cpp  test_angles.cpp  vector.cpp
software/src/unball/vision/: ball_filter.cpp  ball_identifier.cpp  ball_tracker.cpp  gui.cpp  homography.cpp  kalman_filter.cpp  measurement_conversion.cpp  preprocessor.cpp  robot_filter.cpp  robot_identifier.cpp  robot_tracker.cpp  segmentation_algorithm.cpp  segmenter.cpp  tracked_field.cpp  tracked_object.cpp  tracked_robot.cpp  tracker.cpp  vision.cpp  vision_node.cpp  vision_polygon.cpp
software/src/vision/: gui.cpp  preprocessor.cpp  segmenter.cpp  vision.cpp  vision.hpp  vision_node.cpp
software/test/: potential_field_demo.py
software/test/utils/: test_angles.cpp  test_invert_angles.cpp  test_point.cpp
(+100 files in other folders)
