<?xml version="1.0"?>
<package>
  <name>unball</name>
  <version>0.0.1</version>
  <description>The UnBall Robot Soccer Team package</description>

  <maintainer email="matheus.v.portela@gmail.com">Matheus Vieira Portela</maintainer>
  <maintainer email="mota.icaro@gmail.com">Ícaro Mota</maintainer>
  <maintainer email="gabri.navess@gmail.com">Gabriel Naves</maintainer>
  
  <license>MIT</license>
  
  <url type="website">https://github.com/unball/ieee-very-small</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  
</package>

